--- a/Portfolio 0.5/index.html
+++ b/Portfolio 0.5/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<meta charset=utf-8>
-	<title>Index Page</title>
-	<ul>
-	<li><a href="about.html">About</a></li>
-	<li><a href="index.html">Index</a></li>
-	<li><a href="contact.html">Contact</a></li>
-	</ul>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="portfolio-index-style.css">
 	</head>
+	<body>
+		<div class="header">
+			<img class="spartan-stadium">
+				<ul class="top_nav">
+					<li><a href="index.html">Welcome</a></li>
+					<li><a href="aboutme.html">About Me</a></li>
+					<li><a href="skills.html">Skills</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</div>	
+		</div>
+
 	<body>
 	<h1>Index Page</h1>
 	<p>
