--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="portfolio-index-style.css">
+		<script type="text/javascript">
+			$
+		</script>
 	</head>
 	<body>
 		<div class="header">
