added a onclick event for email address and a hide function on hover for a paragraph

--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset=utf-8>
-		<link rel="stylesheet" type="text/css" href="portfolio-index-style.css" />
-		<title>Contact Page</title>
-	</head>
-	<body>
-		<div class="header">
-			<ul class="top_nav">
-				<li><a href="index.html">Welcome</a></li>
-				<li><a href="aboutme.html">About Me</a></li>
-				<li><a href="skills.html">Skills</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-		<h1>Contact Page</h1>
-		<p>
-		<ul>
-		<li>1056 Diamond st. San Diego, CA 92109</li>
-		<li>(858)361-8927</li>
-		</ul>
-		</p>
-		<p><img src="parrisdriving.jpg"></p>
-	</body>
-</html>
 
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript">
+    
+    </script>
+    <meta charset=utf-8>
+    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" href="portfolio-index-style.css" />
+    <title>Contact Page</title>
+</head>
+
+<body>
+    <div class="header" onclick="">
+        <ul class="top_nav">
+            <li><a href="index.html">Welcome</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li class="contact"><a href="contact.html" >Contact</a></li>
+        </ul>
+    </div>
+    <h1>Contact Page</h1>
+    <p>
+  		
+
+    </p>
+    <p class="drivingphoto"><img src="parrisdriving.jpg"></p>
+
+    <button id="btnEmail" onclick="fullEmailAddress()">Email</button>
+    <p class="hideP">Testing this paragraph to see if it hides when i hover over it</p>
+</body>
+
+</html>
